finished company and profi

--- a/src/jade/company.jade
+++ b/src/jade/company.jade
@@ -70,7 +70,7 @@ block main
 					-for (var j=1;j<=4;j++)
 						li.specialist-wrap
 							.specialist__img-wrap
-								img(src='img/content/spec-img.jpg')
+								img(src='img/content/specialist1.png')
 							.specialist__name
 								| Фамилия Имя
 							.specialist__data
@@ -85,7 +85,7 @@ block main
 					-for (var j=1;j<=5;j++)
 						li.sertificat-wrap
 							a(href='img/content/spec-img.jpg' data-lightbox="sertificat-gallery").sertificat__img-wrap.light-b__init
-								img(src='img/content/sertif-img.jpg')
+								img(src='img/content/accred1.jpg')
 	.feedbacks-wrap
 		.feedbacks__title.container
 			h1.h1-und#feedbacks
@@ -111,12 +111,12 @@ block main
 							.feedback__author
 								| Фамилия Имя
 							.feedback__author-photo
-								| тег img
+								img(src='img/content/specialist.png')
 						ul.feedback__img-block
 							li.feedback__img-wrap
-								img(src='img/content/sertif-img.jpg')
+								img(src='img/content/accred1.jpg')
 							li.feedback__img-wrap
-								img(src='img/content/sertif-img.jpg')
+								img(src='img/content/accred2.jpg')
 				.item
 					.feedback__company-name
 						| Компания "Имя компании"
@@ -130,12 +130,12 @@ block main
 						.feedback__author
 							| Фамилия Имя
 						.feedback__author-photo
-							| тег img
+							img(src='img/content/specialist1.png')
 					ul.feedback__img-block
 						li.feedback__img-wrap
-							img(src='img/content/sertif-img.jpg')
+							img(src='img/content/accred2.jpg')
 						li.feedback__img-wrap
-							img(src='img/content/sertif-img.jpg')
+							img(src='img/content/accred1.jpg')
 	.our-partners
 		.container
 			.partners__title
