--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -140,6 +140,7 @@
 
 .sertif-wrap{
 	display: inline-block;
+	background: #f9f9fa;
 	width: 242px;
 	height: 345px;
 	margin-right: 18px;
@@ -161,7 +162,7 @@
 }
 
 .specialists{
-	margin-bottom: 80px;
+	margin-bottom: 30px;
 }
 .specialist__img-wrap{
 	background-color: rgb(249, 249, 250);
@@ -177,15 +178,15 @@
 	}
 }
 .specialist__list{
-	@include clearfix;
 	margin-left: -30px;
+	text-align: center;
 	.specialist-wrap{
 		color: #434a54;
 		display: inline-block;
-		float: left;
 		margin-left: 30px;
 		vertical-align: top;
 		width: 266px;
+		margin-bottom: 50px;
 	}
 	.specialist__name{
 		font-family: 'ubuntubold';
@@ -196,7 +197,13 @@
 		line-height: 18px;
 	}
 }
-
+.specialist-wrap{
+	&:hover{
+		.specialist__name{
+			color: $green;
+		}
+	}
+}
 .specialists__title,
 .sertificats__title,
 .feedbacks__title,
@@ -205,22 +212,27 @@
 	text-align: center;
 }
 .sertificats__list{
-	@include clearfix;
 	margin-left: -20px;
+	text-align: center;
 
 	.sertificat-wrap{
 		display: inline-block;
-		float: left;
-		margin-left: 20px;
+		margin-left: 17px;
 	}
 
 }
 
 .sertificat__img-wrap{
 	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
+	background: #f9f9fa;
 	width: 218px;
 	height: 304px;
 	display: block;
+	text-align: center;
+	img{
+		max-width: 100%;
+		max-height: 100%;
+	}
 }
 .light-b__init{
 	position: relative;
@@ -229,6 +241,7 @@
 		z-index:1;
 		position: absolute;
 		top:0;
+		left: 0;
 		bottom:0;
 		width: 100%;
 		background: rgba(132, 137, 144, 0.3);
@@ -286,6 +299,7 @@
 	}
 }
 .feedback__author-photo{
+	overflow: hidden;
 	text-align: center;
 	position: absolute;
 	bottom: -50px;
@@ -296,12 +310,16 @@
 	@include border-radius(50%);
 	box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.75);
 	background: #fff;
+	img{
+		max-width: 100%;
+	}
 }
 .feedback__img-block{
 	display: inline-block;
 	margin-left: 35px;
 	vertical-align: top;
 	.feedback__img-wrap{
+		background: #f9f9fa;
 		display: inline-block;
 		box-shadow: 0px 1px 5px 0px rgba(67, 74, 84, 0.2);
 		width: 243px;
