--- a/src/jade/links.jade
+++ b/src/jade/links.jade
@@ -29,4 +29,8 @@ block main
 			p
 				a.podrobn-link(href='promezhutuslugi.html')
 					| Промежуточные услуги
+			p
+				a.podrobn-link(href='uslugi.html')
+					| Услуги
+
 
