--- a/src/sass/layout/_partners.scss
+++ b/src/sass/layout/_partners.scss
@@ -42,6 +42,7 @@
 				display: inline-block;
 				margin-bottom: 45px;
 				img{
+					margin:0 auto;
 					width: auto;
 					height: auto;
 					max-width: 100%;
