--- a/src/jade/_includes/_layout/_footer.jade
+++ b/src/jade/_includes/_layout/_footer.jade
@@ -5,7 +5,7 @@ footer.footer
 	.container
 		.footer__logo-wrap
 			a(href="#").footer__logo-link
-				img.footer__logo-img(src="img/icons/logo-footer.png", alt="")
+				img.footer__logo-img(src="img/icons/logo-footer.svg", alt="")
 			a(href="#").footer__logo-dscr.service__link
 				| Международная Система Сертификации
 		.footer__service-items
