--- a/src/jade/partners_single.jade
+++ b/src/jade/partners_single.jade
@@ -48,9 +48,9 @@ block main
 						img(src='img/content/sertif-img.jpg')
 		.reviews-single__nav-line
 			.container
-				.podrobn-link_pre
+				a(href='#' alt='Имя Компании парнтера').podrobn-link_pre
 					| Имя Компании парнтера
-				.podrobn-link
+				a(href='#' alt='Смотреть следющий').podrobn-link
 					| Смотреть следющий
 
 
