--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -476,18 +476,22 @@
 			content: '';
 			position: absolute;
 			display: block;
-			width: 7px;
-			height: 13px;
 			right: 30px;
 			top: 50%;
-			margin-top: -7px;
-			background: url(../img/icons/arrov_grey.png) no-repeat;
-			@include rotate(90);
+			margin-top: -3px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 7px 6.5px 0 6.5px;
+			border-color: $dark transparent transparent transparent;
+			line-height: 0px;
+			_border-color: $dark #000000 #000000 #000000;
+			_filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');
 		}
 		&:hover{
 			color: $green-header;
 			&:after{
-			background: url(../img/icons/arrov_green.png) no-repeat;
+				border-color: $green transparent transparent transparent;
 			}
 		}
 	}
@@ -507,7 +511,7 @@
 			background-image: -ms-linear-gradient( 180deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
 			background-image: linear-gradient( 180deg, rgb(107,238,167) 0%, rgb(87,224,159) 46%, rgb(67,210,151) 100%);
 			&:after{
-				@include rotate(-90);
+				@include rotate(180);
 			}
 			&:hover{
 				color: white;
