--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -144,8 +144,9 @@
 		width: 65px;
 		height: 65px;
 		img{
-		max-width: 100%;
-		max-height: 100%;
+			max-width: 100%;
+			max-height: 100%;
+			@include opacity(0.3);
 		}
 	}
 }
@@ -353,8 +354,8 @@
 			height: 81px;
 			margin-right: 13px;
 			img{
-				width: 100%;
-				height: 100%;
+				max-width: 100%;
+				max-height: 100%;
 				display: block;
 				margin: 0 auto;
 			}
