--- a/src/sass/layout/_uslugi.scss
+++ b/src/sass/layout/_uslugi.scss
@@ -23,18 +23,22 @@
 			content: '';
 			position: absolute;
 			display: block;
-			width: 7px;
-			height: 13px;
 			right: 0;
 			top: 50%;
-			margin-top: -7px;
-			background: url(../img/icons/arrov_grey.png) no-repeat;
-			@include rotate(90);
+			margin-top: -3px;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 7px 6.5px 0 6.5px;
+			border-color: $dark transparent transparent transparent;
+			line-height: 0px;
+			_border-color: #434a54 #000000 #000000 #000000;
+			_filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');
 		}
 		&:hover{
 			color: $lightgreen;
 			&:after{
-			background: url(../img/icons/arrov_green.png) no-repeat;
+				border-color: $green transparent transparent transparent;
 			}
 		}
 	}
@@ -47,7 +51,7 @@
 	.accord-active{
 		.accord-mth__init_simple{
 			&:after{
-				@include rotate(-90);
+				@include rotate(180);
 			}
 			&:hover{
 				text-decoration: underline;
