--- a/src/jade/news.jade
+++ b/src/jade/news.jade
@@ -16,7 +16,7 @@ block main
 					//- Блок новостей с большимим картинками со сторон
 					.picture-page-news
 						//- Большая картинка со стороны
-						img(src="img/news-image.jpg", alt="Новость")
+						.picture-page-news__img(style='background-image: url("../img/news-image.jpg")')
 						a(href="#").picture__descr
 							.date 17.04.2016
 							.descr Анализ существенных финансовых и административных условий
@@ -56,7 +56,7 @@ block main
 										a.more-info(href='#' alt='больше') ...
 					.picture-page-news
 						//- Большая картинка со стороны
-						img(src="img/news-image.jpg", alt="Новость")
+						.picture-page-news__img(style='background-image: url("../img/news-image.jpg")')
 						a(href="#").picture__descr
 							.date 17.04.2016
 							.descr Анализ существенных финансовых и административных условий
