--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,7 +1,7 @@
 .popup__make-call-wrap{
 	width: 315px;
 	text-align: center;
-	display: block;
+	display: none;
 	margin: 0 auto;
 	.popup-form{
 		padding: 50px 30px 20px;
@@ -12,7 +12,7 @@
 		-moz-box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.31);
 		box-shadow: 0px 0px 26px 3px rgba(0,0,0,0.31);
 	}
-	.close-popup{
+	.close-popup__make-call{
 		position: absolute;
 		background: url('../img/icons/close-popup.png');
 		width: 12px;
@@ -26,7 +26,9 @@
 	}
 	.popup-title{
 		@include font-size(40px);
-		color: #000; //fff
+		color: #fff;
+		font-weight: 400;
+		line-height: 42px;
 		text-align: center;
 		margin-bottom: 25px;
 	}
