--- a/src/sass/layout/_news.scss
+++ b/src/sass/layout/_news.scss
@@ -9,11 +9,12 @@
 .picture-page-news{
 	position: relative;
 	overflow: hidden;
-	width: 48.5%;
-	height: 50%;
-	img{
-		max-width: 100%;
-		max-height: 100%;
+	width: 570px;
+	height: 570px;
+	.picture-page-news__img{
+		width: 100%;
+		height: 100%;
+		background-size: cover;
 	}
 }
 .picture__descr{
