--- a/src/sass/layout/_promezhutuslugi.scss
+++ b/src/sass/layout/_promezhutuslugi.scss
@@ -7,34 +7,50 @@
 	width: 370px;
 	margin-right: 75px;
 	padding: 40px 20px;
+	background: #fff;
 	border: 1px solid $lightgray;
 	@include border-radius(3px);
 	position: relative;
+
+	.menu-promezhutuslugi__list{
+		@include transition(0.3s);
+	}
+
+	.promezhutuslugi__init-left{
+		position: absolute;
+		left: 100%;
+		top:50%;
+		margin-top: -61px;
+		cursor: pointer;
+		&:before{
+			content: "";
+			position: absolute;
+		    top: 0;
+			left: 0;
+			width: 18px;
+			height: 123px;
+			background: url(../img/icons/before-menu.png);
+			background-size: cover;
+		}
+		&:after{
+			content: "";
+			position: absolute;
+			width: 8px;
+			height: 11px;
+			background: url(../img/icons/after-menu.png);
+			background-size: cover;
+			top: 56px;
+			left: 5px;
+		}
+		&.active{
+			&:after{
+				@include rotate(180);
+			}
+		}
+	}
+
 }
-.promezhutuslugi__left-block:before{
-	content: "";
-	position: absolute;
-    top: 22%;
-	right:-17px;
-	width: 18px;
-	height: 123px;
-	background: url(../img/icons/before-menu.png);
-	background-size: cover;	
-}
-.promezhutuslugi__left-block:after{
-	content: "";
-	position: absolute;
-	width: 8px;
-	height: 11px;
-	background: url(../img/icons/after-menu.png);
-	background-size: cover;
-    top: 30.5%;
-    right: -12px;
-}
-.promezhutuslugi__left-block:hover:after,
-.promezhutuslugi__left-block:hover:before{
-	cursor: pointer;
-}
+
 .menu-promezhutuslugi{
 	&__list{
 
@@ -51,8 +67,10 @@
 	&__link:hover{
 		text-decoration: underline;
 	}
-	&__link_active{
-		font-weight: 600;
+	&__item_active{
+		.menu-promezhutuslugi__link{
+			font-weight: 600;
+		}
 	}
 }
 .promezhutuslugi__right-block{
@@ -114,7 +132,7 @@
 		margin-bottom: 18px;
 	}
 	&__link{
-		
+
 	}
 	&__link:hover{
 		text-decoration: underline;
@@ -127,7 +145,7 @@
 // Клас для отображения в две колонки
 // Первая колонка - .first-block, вторая - .second-block
 .duoble-block{
-	@include clearfix();	
+	@include clearfix();
 }
 	.first-block{
 		width: 48%;
