--- a/src/sass/layout/_style.scss
+++ b/src/sass/layout/_style.scss
@@ -56,7 +56,7 @@ body{
 .wrapper{
 	min-width: 1200px;
 	position: relative;
-	background: url(../img/bg.svg);
+	// background: url(../img/bg.svg);
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position-x: 27%;
